# 1trc

./: .gitignore  README.md  pyproject.toml
src/onetrc/: __init__.py  build.py  config.py  data.py
src/onetrc/solutions/: __init__.py  duckdb_basic.py  interface.py
